fix(room-plan): images are too big
fixe: #291

--- a/Phonebook.Frontend/src/app/shared/components/room-plan/room-plan.component.scss
+++ b/Phonebook.Frontend/src/app/shared/components/room-plan/room-plan.component.scss
@@ -6,3 +6,7 @@
   padding-bottom: 40%;
   margin: auto;
 }
+
+.img-container {
+  width: 100%;
+}
